samples/_failures_safe/1761246911_acd410_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d8e0648d.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_d8e0648d.c:169:5: error: expected expression at end of input
  169 |     token.column =
      |     ^~~~~
./samples/SAFE/__tmp_d8e0648d.c:169:5: error: expected declaration or statement at end of input
